--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -25,5 +25,17 @@
   %div.main-content
     %div.chat-space
       %div.header
+        %div.header__info
+          %p.header__info--name<
+            sample1
+          %p.header__info--members<
+            Members: sample太郎,sample花子
+            %a
+              = icon "plus-circle"
+        %div.header__buttons<
+          %ul
+            %li.header__buttons--list<
+              Edit
+
       %div.chat
       %div.putting-message
