[WIP]markup メッセージの入力部分作成ちゅう

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -117,21 +117,78 @@ body {
         }
       }
       .chat {
-        width: 100%;
+        height: 100%;
         background-color: #F8F8F8;
-        position: absolute;
-        padding: 0 40px;
+        padding: 26px 40px 0 40px;
+/*        position: absolute;
         top: 96px;
-        bottom: 90px;
+        bottom: 90px;*/
+        ul {
+          height: 100%;
+          width: 50%;
+          .chat__message {
+            height: 54px;
+            width: 100%;
+            padding: 10px 0;
+            border-bottom: solid 1px #AAAAAA;
+            .chat__message--name {
+              font-size: 16px;
+              color: #434A54;
+              span {
+                margin-left: 10px;
+                font-size: 12px;
+                color: #999999;
+              }
+            }
+            .chat__message--text {
+              margin-top: 10px;
+              font-size: 14px;
+            }
+          }
+          .my-message {
+
+          }
+        }
       }
       .putting-message {
         height: 90px;
         width: 100%;
+        box-sizing:border-box;
         background-color: #AAAAAA;
         position: absolute;
         padding: 0 40px;
         margin-left: -1px;
         bottom: 0px;
+        .putting-message__form {
+          height: 100%;
+          width: 100%;
+          padding: 20px 0 20px 0;
+          box-sizing:border-box;
+          .putting-message__form--text {
+            height: 50px;
+            width: 100%;
+            margin-right: -97px;
+            padding-right: 97px;
+            padding-left: 10px;
+            box-sizing:border-box;
+            float: left;
+            border: none;
+            font-size: 16px;
+            color: #434A54;
+          }
+          .putting-message__form--button {
+            height: 50px;
+            width: 82px;
+            padding: 0 20px;
+            margin-left: 15px;
+            float: right;
+            border: solid 1px #38AEF0;
+            background-color: #38AEF0;
+            text-align: center;
+            font-size: 15px;
+            color: #FFFFFF;
+          }
+        }
       }
     }
   }
