--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -38,4 +38,61 @@
               Edit
 
       %div.chat
+        %ul
+          %li.chat__message
+            %p.chat__message--name<
+              sample花子
+              %span<
+                2017/02/07 06:27:02
+            %p.chat__message--text<
+              hogehogeなう
+          %li.chat__message.my-message
+            %p.chat__message--name<
+              sample太郎
+              %span<
+                2017/02/07 06:27:34
+            %p.chat__message--text<
+              hoge~~~~~
+          %li.chat__message
+            %p.chat__message--name<
+              sample花子
+              %span<
+                2017/02/07 06:27:56
+            %p.chat__message--text<
+              おらおら
+          %li.chat__message
+            %p.chat__message--name<
+              sample花子
+              %span<
+                2017/02/07 06:28:33
+            %p.chat__message--text<
+              おい
       %div.putting-message
+        %form.putting-message__form
+          %input.putting-message__form--text{type: :text, placeholder: "type a message"}
+          %input.putting-message__form--button{type: :submit, value: "Send"}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
