--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -29,7 +29,7 @@
           %p.header__info--name<
             sample1
           %p.header__info--members<
-            Members: sample太郎,sample花子
+            Members: sample太郎,sample花子 ..
             %a
               = icon "plus-circle"
         %div.header__buttons<
@@ -39,6 +39,34 @@
 
       %div.chat
         %ul
+          %li.chat__message
+            %p.chat__message--name<
+              sample花子
+              %span<
+                2017/02/07 06:27:02
+            %p.chat__message--text<
+              hogehogeなう
+          %li.chat__message.my-message
+            %p.chat__message--name<
+              sample太郎
+              %span<
+                2017/02/07 06:27:34
+            %p.chat__message--text<
+              hoge~~~~~
+          %li.chat__message
+            %p.chat__message--name<
+              sample花子
+              %span<
+                2017/02/07 06:27:56
+            %p.chat__message--text<
+              おらおら
+          %li.chat__message
+            %p.chat__message--name<
+              sample花子
+              %span<
+                2017/02/07 06:28:33
+            %p.chat__message--text<
+              おい
           %li.chat__message
             %p.chat__message--name<
               sample花子
