カラーの変数style.scssにまとめた

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,14 +1,4 @@
-$white: #FFFFFF;
-$gray_border: #eeeeee;
-$gray_chat: #F8F8F8;
-$gray_puttingMessage: #AAAAAA;
-$gray_text: #434A54;
-$light-gray: #999999;
-$deep-gray: #333333;
-$indigo_sidebar: #2f3e51;
-$deep-indigo: #253141;
-$vivid-blue: #38AEF0;
-
+@import "style";
 
 body,html {
   height: 100%;
