--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -4,11 +4,11 @@ body,html {
   height: 100%;
 }
 
-.contents {
+#wrapper {
   width: 100%;
 }
 
-  .side-bar {
+  #side-bar {
     height: 100%;
     background-color: $indigo_sidebar;
     width: 300px;
@@ -61,7 +61,7 @@ body,html {
     }
   }
 
-  .main-content {
+  #main {
     height: 100%;
     width: 100%;
     margin-left: -300px;
@@ -69,7 +69,7 @@ body,html {
     float: right;
     box-sizing: border-box;
 
-    .chat-space {
+    .contents {
       position: relative;
       width: 100%;
 
@@ -84,18 +84,18 @@ body,html {
         right: 0px;
         left: 300px;
 
-        .header__info {
+        .info {
           height: 100%;
           width: 50%;
           float: left;
 
-          .header__info--name {
+          .info__name {
             padding: 30px 0 10px;
             font-size: 20px;
             color: $deep-gray;
           }
 
-          .header__info--members {
+          .info__members {
             font-size: 12px;
             color: $light-gray;
 
@@ -105,13 +105,13 @@ body,html {
           }
         }
 
-        .header__buttons {
+        .buttons {
           height: 100%;
           width: 50%;
           float: right;
 
           ul {
-            .header__buttons--list {
+            .buttons__list {
               height: 32px;
               margin: 28px 0 0 2px;
               padding: 8px 20px 0;
@@ -125,7 +125,7 @@ body,html {
         }
       }
 
-      .chat {
+      .container {
         background-color: $gray_chat;
         padding: 121px 40px 89px;
 
@@ -133,13 +133,13 @@ body,html {
           height: 100%;
           width: 50%;
 
-          .chat__message {
+          .message {
             height: 54px;
             width: 100%;
             padding: 10px 0;
             border-bottom: solid 1px $gray_puttingMessage;
 
-            .chat__message--name {
+            .message__name {
               font-size: 16px;
               color: $gray_text;
 
@@ -150,7 +150,7 @@ body,html {
               }
             }
 
-            .chat__message--text {
+            .message__text {
               margin-top: 10px;
               font-size: 14px;
               color: $deep-gray;
@@ -162,7 +162,7 @@ body,html {
         }
       }
 
-      .putting-message {
+      .form-wrapper {
         height: 90px;
         box-sizing: border-box;
         background-color: $gray_puttingMessage;
@@ -173,13 +173,13 @@ body,html {
         right: 0px;
         left: 300px;
 
-        .putting-message__form {
+        form {
           height: 100%;
           width: 100%;
           padding: 20px 0;
           box-sizing: border-box;
 
-          .putting-message__form--text {
+          .text {
             height: 50px;
             width: 100%;
             margin-right: -97px;
@@ -192,7 +192,7 @@ body,html {
             color: $gray_text;
           }
 
-          .putting-message__form--button {
+          .button {
             height: 50px;
             width: 82px;
             padding: 0 20px;
