--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -1,7 +1,7 @@
 $white: #FFF;
 $gray_border: #eee;
 $gray_chat: #F8F8F8;
-$gray_puttingMessage: #AAA;
+$gray_formWrapper: #AAA;
 $gray_text: #434A54;
 $light-gray: #999;
 $deep-gray: #333;
