PF編集ページへのリンク実装

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -27,6 +27,9 @@ body,html {
 
         .icon {
           float: right;
+          i {
+            color: $white;
+          }
         }
       }
     }
