--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -7,6 +7,8 @@
           = icon "pencil-square-o"
           = link_to edit_user_registration_path do
             = icon "cog"
+          = link_to destroy_user_session_path, method: :delete do
+            = icon "sign-out"
     %ul.chats
       %li.chats__list#selected<
         %p.chats__list--name<
