--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -25,7 +25,7 @@ body,html {
         font-size: 16px;
         color: $white;
 
-        .icon {
+        .icons {
           float: right;
           i {
             color: $white;
