クラスicon指定要素のデザイン調整

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -26,9 +26,11 @@ body,html {
         color: $white;
 
         .icons {
-          float: right;
-          i {
+
+          .icon {
+            float: right;
             color: $white;
+            padding: 0 2px;
           }
         }
       }
