--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -4,14 +4,11 @@
       %p<
         sample太郎
         %span.icons
-          %span.icon
-            = icon "pencil-square-o"
-          = link_to edit_user_registration_path do
-            %span.icon
-              = icon "cog"
           = link_to destroy_user_session_path, method: :delete do
-            %span.icon
-              = icon "sign-out"
+            = icon "sign-out", {class: :icon}
+          = link_to edit_user_registration_path do
+            = icon "cog", {class: :icon}
+          = icon "pencil-square-o", {class: :icon}
     %ul.chats
       %li.chats__list#selected<
         %p.chats__list--name<
