フヨウナ{} 削除

--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -5,10 +5,10 @@
         sample太郎
         %span.icons
           = link_to destroy_user_session_path, method: :delete do
-            = icon "sign-out", {class: :icon}
+            = icon "sign-out", class: :icon
           = link_to edit_user_registration_path do
-            = icon "cog", {class: :icon}
-          = icon "pencil-square-o", {class: :icon}
+            = icon "cog", class: :icon
+          = icon "pencil-square-o", class: :icon
     %ul.chats
       %li.chats__list#selected<
         %p.chats__list--name<
