flash_messageのデザイン実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,4 +3,5 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "top";
-@import "user"
+@import "flash_message";
+@import "user";
