--- a/app/assets/stylesheets/flash_message.scss
+++ b/app/assets/stylesheets/flash_message.scss
@@ -1,42 +1,42 @@
 .alert{
     width: 100%;
-    text-align: center;
     z-index: 2;
     float: left;
     position: relative;
     top: 0;
+
+    &__error {
+        background-color: #f2dede;
+        border-color: #eed3d7;
+        color: #b94a48;
+     }
+
+    &__alert {
+        background-color: #f2dede;
+        border-color: #eed3d7;
+        color: #b94a48;
+     }
+
+    &__success {
+        background-color: #dff0d8;
+        border-color: #d6e9c6;
+        color: #468847;
+     }
+
+    &__notice {
+        background-color: #dff0d8;
+        border-color: #d6e9c6;
+        color: #468847;
+     }
+
     .close {
         padding-left: 5px;
         float: left;
     }
+
     &__message {
         text-align: center;
     }
 }
-.alert-error {
-    background-color: #f2dede;
-    border-color: #eed3d7;
-    color: #b94a48;
-    text-align: left;
- }
 
-.alert-alert {
-    background-color: #f2dede;
-    border-color: #eed3d7;
-    color: #b94a48;
-    text-align: left;
- }
 
-.alert-success {
-    background-color: #dff0d8;
-    border-color: #d6e9c6;
-    color: #468847;
-    text-align: left;
- }
-
-.alert-notice {
-    background-color: #dff0d8;
-    border-color: #d6e9c6;
-    color: #468847;
-    text-align: left;
- }
