フラッシュメッセージ色を変数化

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -8,3 +8,8 @@ $deep-gray: #333;
 $indigo_sidebar: #2f3e51;
 $deep-indigo: #253141;
 $vivid-blue: #38AEF0;
+
+$light-red_alert: #f2dede;
+$red_alert: #b94a48;
+$light-green_alert: #dff0d8;
+$green_alert: #468847;
