--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -6,6 +6,7 @@ body,html {
   height: 100vh;
   width: 100%;
   z-index: 1;
+  position: relative;
 
   #side-bar {
     height: 100%;
@@ -15,6 +16,7 @@ body,html {
     border-right: solid 1px $gray_border;
     box-sizing: border-box;
     position: fixed;
+    z-index: 2;
 
     .header {
       height: 96px;
@@ -72,6 +74,9 @@ body,html {
     padding-left: 300px;
     float: right;
     box-sizing: border-box;
+    position: fixed;
+    right: 0;
+    z-index: 1;
 
     .contents {
       position: relative;
