closeをidとして指定

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
     - flash.each do |key, value|
       .alert
         = content_tag :div , "", class: "alert__#{key}" do
-          %span.close<
+          %span#close<
             ×
           .alert__message
             = value
