不要な記述(content_tagの第二引数,alert__messageクラスの指定)削除

--- a/app/assets/stylesheets/flash_message.scss
+++ b/app/assets/stylesheets/flash_message.scss
@@ -8,30 +8,30 @@
     &__error {
         background-color: $light-red_alert;
         color: $red_alert;
+        text-align: center;
      }
 
     &__alert {
         background-color: $light-red_alert;
         color: $red_alert;
+        text-align: center;
      }
 
     &__success {
         background-color: $light-green_alert;
         color: $green_alert;
+        text-align: center;
      }
 
     &__notice {
         background-color: $light-green_alert;
         color: $green_alert;
+        text-align: center;
      }
 
-    .close {
+    #close {
         padding-left: 5px;
         float: left;
-    }
-
-    &__message {
-        text-align: center;
     }
 }
 
