--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,8 @@
     = csrf_meta_tags
   %body
     - flash.each do |key, value|
+      - key = "info" if key == "notice"
+      - key = "danger"  if key == "alert"
       .alert
         = content_tag :div , class: "alert__#{key}" do
           %span#close<
