ビューファイルの回りこみ解消

--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -1,6 +1,6 @@
 .chat-group-form
   %h1 チャットグループ編集
-  %form#edit_chat_group_22.edit_chat_group{"accept-charset" => "UTF-8", :action => "/chat_groups/22", :method => "post"}
+  %form{"accept-charset" => "UTF-8", :action => "/chat_groups/22", :method => "post"}
     %input{:name => "utf8", :type => "hidden", :value => "✓"}/
     %input{:name => "_method", :type => "hidden", :value => "patch"}/
     %input{:name => "authenticity_token", :type => "hidden", :value => "U5ABp0/UobRQTSwsR0V40bX1w3t0rZ0CTqrVyLecD+L6sdhBRO/gVcKy7w/Rgxnc7Hf0Ts39996dal3to5fTag=="}/
