--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -1,3 +1,11 @@
+@mixin clearfix(){
+  &:after {
+    clear:both;
+    display: block;
+    content: "";
+  }
+}
+
 .chat-group-form {
   width: 980px;
   margin: 60px auto;
@@ -13,94 +21,97 @@
     text-align: center;
   }
 
-  .chat-group-form__errors {
-    margin: 30px 0;
-    padding: 20px 40px;
-    border: 1px solid #ddd;
-    border-radius: 2px;
-    text-align: center;
+  @include clearfix();
 
-    h2 {
-      margin-bottom: 10px;
-      color: #f05050;
-      font-size: 14px;
-    }
+    .chat-group-form__errors {
+      margin: 30px 0;
+      padding: 20px 40px;
+      border: 1px solid #ddd;
+      border-radius: 2px;
+      text-align: center;
 
-    ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-    }
-
-    li {
-      margin: 0;
-      padding: 0;
-      font-size: 13px;
-    }
-  }
-
-  .chat-group-form__field {
-    margin-top: 30px;
-
-    .chat-group-form__field--left {
-      float: left;
-      width: 30%;
-      padding-right: 20px;
-      padding-left: 20px;
-      box-sizing: border-box;
-    }
-
-    .chat-group-form__field--right {
-      float: right;
-      width: 70%;
-    }
-
-    .chat-group-form__label {
-      display: block;
-      line-height: 50px;
-      font-weight: bold;
-      text-align: right;
-    }
-
-    .chat-group-form__input {
-      float: left;
-      width: 100%;
-      line-height: 30px;
-      padding: 10px 15px;
-      box-sizing: border-box;
-    }
-  }
-
-  .chat-group-user {
-    padding: 0 15px;
-    line-height: 50px;
-    font-size: 14px;
-    border-bottom: 1px solid #ddd;
-
-    .chat-group-user__name {
-      float: left;
-    }
-
-    .chat-group-user__btn {
-      float: right;
-      display: inline-block;
-      cursor: pointer;
-
-      &.chat-group-user__btn--add {
-        color: #38aef0;
-      }
-
-      &.chat-group-user__btn--remove {
+      h2 {
+        margin-bottom: 10px;
         color: #f05050;
+        font-size: 14px;
+      }
+
+      ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+      }
+
+      li {
+        margin: 0;
+        padding: 0;
+        font-size: 13px;
       }
     }
-  }
 
-  .chat-group-form__action-btn {
-    display: inline-block;
-    padding: 12px 20px;
-    color: #fff;
-    background-color: #38aef0;
-    border: 0;
-  }
+    .chat-group-form__field {
+      margin-top: 30px;
+
+      .chat-group-form__field--left {
+        float: left;
+        width: 30%;
+        padding-right: 20px;
+        padding-left: 20px;
+        box-sizing: border-box;
+      }
+
+      .chat-group-form__field--right {
+        float: right;
+        width: 70%;
+      }
+
+      .chat-group-form__label {
+        display: block;
+        line-height: 50px;
+        font-weight: bold;
+        text-align: right;
+      }
+
+      .chat-group-form__input {
+        float: left;
+        width: 100%;
+        line-height: 30px;
+        padding: 10px 15px;
+        box-sizing: border-box;
+      }
+    }
+
+    .chat-group-user {
+      padding: 0 15px;
+      line-height: 50px;
+      font-size: 14px;
+      border-bottom: 1px solid #ddd;
+
+      .chat-group-user__name {
+        float: left;
+      }
+
+      .chat-group-user__btn {
+        float: right;
+        display: inline-block;
+        cursor: pointer;
+
+        &.chat-group-user__btn--add {
+          color: #38aef0;
+        }
+
+        &.chat-group-user__btn--remove {
+          color: #f05050;
+        }
+      }
+    }
+
+    .chat-group-form__action-btn {
+      display: inline-block;
+      padding: 12px 20px;
+      color: #fff;
+      background-color: #38aef0;
+      border: 0;
+    }
+  
 }
