--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -1,11 +1,3 @@
-@mixin clearfix(){
-  &:after {
-    clear:both;
-    display: block;
-    content: "";
-  }
-}
-
 .chat-group-form {
   width: 980px;
   margin: 60px auto;
@@ -22,6 +14,8 @@
   }
 
   @include clearfix();
+
+  form {
 
     .chat-group-form__errors {
       margin: 30px 0;
@@ -113,5 +107,5 @@
       background-color: #38aef0;
       border: 0;
     }
-  
+  }
 }
