mixinディレクトリ作成 group.scss整理

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 @import "reset";
-@import "mixin";
+@import "mixin/clearfix";
 @import "colors";
 @import "font-awesome-sprockets";
 @import "font-awesome";
