--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -13,16 +13,9 @@
         %label.chat-group-form__label{:for => "chat_group_チャットメンバーを追加"} チャットメンバーを追加
       .chat-group-form__field--right
         .chat-group-form__search.clearfix
-          %input#user-search-field.chat-group-form__input{:placeholder => "追加したいユーザー名を入力してください", :type => "text"}/
+          = collection_check_boxes(:chat_group, :user_ids, User.all, :id, :name) do |b|
+            = b.label { b.check_box + b.text }
         #user-search-result
-    .chat-group-form__field.clearfix
-      .chat-group-form__field--left
-        %label.chat-group-form__label{:for => "chat_group_チャットメンバー"} チャットメンバー
-      .chat-group-form__field--right
-        #chat-group-users
-          #chat-group-user-22.chat-group-user.clearfix
-            %input{:name => "chat_group[user_ids][]", :type => "hidden", :value => "22"}/
-            %p.chat-group-user__name seo_kyohei
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
       .chat-group-form__field--right
