--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -8,13 +8,14 @@
       .chat-group-form__field--left
         %label.chat-group-form__label{:for => "chat_group_name"} グループ名
       .chat-group-form__field--right
-        %input#chat_group_name.chat-group-form__input{:name => "chat_group[name]", :placeholder => "グループ名を入力してください", :type => "text", :value => "ほげー"}/
+        %input#chat_group_name.chat-group-form__input{:name => "chat_group[name]", :placeholder => "グループ名を入力してください", :type => "text", :value => @group[:name]}/
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
         %label.chat-group-form__label{:for => "chat_group_チャットメンバーを追加"} チャットメンバーを追加
       .chat-group-form__field--right
         .chat-group-form__search.clearfix
-          %input#user-search-field.chat-group-form__input{:placeholder => "追加したいユーザー名を入力してください", :type => "text"}/
+          = collection_check_boxes(:chat_group, :user_ids, User.all, :id, :name) do |b|
+            = b.label { b.check_box + b.text }
         #user-search-result
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
